[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "knowing-machine"
version = "0.0.6"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "Knowing-Machine ..."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["knowing-machine"]
dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
knowing-machine = "knowing_machine.cli:run"

[project.urls]
"Homepage" = "https://github.com/knowing-machine/knowing-machine"

[dependency-groups]
dev = ["pytest>=8.0.0"]
